fix: HP ScatterPlots scrollbar

--- a/webui/react/src/pages/ExperimentDetails/ExperimentVisualization/HpScatterPlots.module.scss
+++ b/webui/react/src/pages/ExperimentDetails/ExperimentVisualization/HpScatterPlots.module.scss
@@ -2,7 +2,7 @@
   height: 100%;
 
   .container {
-    min-height: 200px;
+    min-height: 400px;
     position: relative;
   }
   .container > [class*='Message_base'] {
